[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "retinal-biomarkers"
version = "1.0.0"
description = "Extract retinal vascular biomarkers from fundus images"
readme = "README.md"
authors = [{name = "Abdullah Basit", email = "abdullah.basit@hotmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/91Abdullah/retinal-biomarkers"
Repository = "https://github.com/91Abdullah/retinal-biomarkers"
